--- a/package.json
+++ b/package.json
@@ -74,20 +74,18 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "bitcoinjs-lib-zcash": "git+https://github.com/zerocurrencycoin/zerojs-lib.git#sapling_try",
+    "bitgo-utxo-lib": "git+https://github.com/cryptoforge/bitgo-utxo-lib.git#sapling_dirty",
     "cordova-android": "^6.2.3",
     "cordova-clipboard": "^1.2.1",
     "cordova-ios": "^4.5.5",
     "cordova-plugin-add-swift-support": "^1.7.2",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-disable-ios11-statusbar": "^1.0.0",
     "cordova-plugin-file": "^4.3.3",
-    "cordova-plugin-google-analytics": "^1.8.6",
+    "cordova-plugin-google-analytics": "^1.8.3",
     "cordova-plugin-http": "^1.2.0",
     "cordova-plugin-inappbrowser": "^1.7.2",
     "cordova-plugin-qrscanner": "^2.6.0",
-    "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-wkwebview-engine": "^1.1.4",
@@ -103,10 +101,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-wkwebview-engine": {},
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-google-analytics": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-disable-ios11-statusbar": {}
+      "cordova-plugin-google-analytics": {}
     },
     "platforms": [
       "android",
